# GAMES101-Computer-Graphics-Assignment

./: .gitignore  Ass1.md  Ass5.md  README.md  坑.md  辐射度量学.pptx
Assignment1/Assignment1/: main.cpp  rasterizer.cpp
Assignment2-Windows/Assignment2/: CMakeLists.txt  Triangle.cpp  github.txt  main.cpp  mine_bad.txt  rasterizer.hpp
Assignment2/Assignment2/: CMakeLists.txt  README.md  Triangle.hpp  cross_product.cpp  main.cpp  rasterizer.cpp  rasterizer.hpp
Assignment3-Windows/Code/: CMakeLists.txt  README.md  Shader.hpp  Triangle.cpp  Triangle.hpp  main.cpp  myutils.cpp  myutils.h  rasterizer.cpp  rasterizer.hpp  test.cpp
Assignment4-Windows/code/: README.md  ass4.pptx  main.cpp
Assignment5-Windows/Code/: CMakeLists.txt  Object.hpp  README.md  Renderer.cpp  Scene.hpp  Sphere.hpp  Triangle.hpp  global.hpp  main.cpp
Assignment6-Windows/Assignment6/: BVH.cpp  (+11 more)
Assignment7-Windows/Assignment7/: BVH.cpp  Bounds3.hpp  CMakeCache.txt  CMakeLists.txt  Makefile  Material.hpp  README.md  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Triangle.hpp  cmake_install.cmake  global.hpp  main.cpp
Assignment7-Windows/Assignment7/build_old/: CMakeCache.txt  binary.ppm  binary_WH_0784_SPP_1024_RR_0.80.ppm  cmake_install.cmake  compile_commands.json
Assignment7-Windows/Assignment7/build_old/.cmake/api/v1/reply/: cache-v2-26be219bc3f1611f0f97.json  codemodel-v2-6bca93860f59844acc70.json  index-2021-04-04T17-43-11-0969.json  target-RayTracing2-Debug-717010eb8f30ef046296.json
Assignment7-Windows/Assignment7/build_old/image100/: visible_WH_0100_SPP_032_RR_0.80.ppm
pa0/: main.cpp
(+5 files in other folders)
